latestPosts heigth fixed & scrollbar styled

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #1e293b white;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1e293b;
+  border-radius: 14px;
+  border: 3px solid white;
+}
+
 @tailwind components;
 @tailwind utilities;
